Closed
Bug 1020541
Opened 11 years ago
Closed 11 years ago
JS Stacks no longer reported in the profiler
Categories
(Core :: Gecko Profiler, defect)
Tracking
()
RESOLVED
FIXED
mozilla33
People
(Reporter: BenWa, Assigned: vporof)
References
Details
Attachments
(1 file)
1.21 KB,
patch
|
BenWa
:
review+
djvj
:
review+
|
Details | Diff | Splinter Review |
Looks like it's caused by 1004726.
Reporter | ||
Comment 1•11 years ago
|
||
Good: ece2f032c42a
Bad: 163cef53a92c
Looks like it's still reproducible with 163cef53a92c, the latest landing of bug 1004726 .
Flags: needinfo?(vporof)
Assignee | ||
Comment 2•11 years ago
|
||
However, it does work on (my) fx-team tip (748b4ffb759e). I would suggest waiting for a merge and testing it out again once it hits m-c.
Flags: needinfo?(vporof)
Comment 3•11 years ago
|
||
JS profiling with the Gecko profiler add-on still doesn't work for me in today's Nightly (20140616030203).
Reporter | ||
Comment 4•11 years ago
|
||
Can you have a look victor or backout bug 1004726? This is an important regression.
Flags: needinfo?(vporof)
Assignee | ||
Comment 5•11 years ago
|
||
I'm not convinced bug 1004726 is the culprit, because comment 2. But I'll try backing it out and see if it fixes things.
Flags: needinfo?(vporof)
Assignee | ||
Comment 6•11 years ago
|
||
Again, the profiler WORKS and correctly displays JS stacks on fx-team, but not mozilla-central. Possibly a bad merge?
Reporter | ||
Comment 7•11 years ago
|
||
It can't be a merge. The problem was introduced on this changeset on mozilla-central which is not a merge:
http://hg.mozilla.org/mozilla-central/rev/163cef53a92c
I believe you that it works on fx-team but the fact remains that this broke on your changeset on master. Perhaps looking at the difference on fx-team and mozilla-central will point you to the problem.
Comment 8•11 years ago
|
||
(In reply to Benoit Girard (:BenWa) from comment #7)
> It can't be a merge. The problem was introduced on this changeset on
> mozilla-central which is not a merge:
> http://hg.mozilla.org/mozilla-central/rev/163cef53a92c
It was landed as part of this push, which is a merge: http://hg.mozilla.org/mozilla-central/pushloghtml?changeset=163cef53a92c
Reporter | ||
Comment 9•11 years ago
|
||
Comment 10•11 years ago
|
||
Oh I see.
Reporter | ||
Comment 11•11 years ago
|
||
Can you look into why this is busted on mozilla-central?
Flags: needinfo?(vporof)
Assignee | ||
Comment 13•11 years ago
|
||
The gecko profiler works properly with a fresh m-c build on 163cef53a92c.
Assignee | ||
Comment 14•11 years ago
|
||
Um... a m-c tip also works fine .__.
Reporter | ||
Comment 15•11 years ago
|
||
It's still broken for me and likely everyone else who comes to me complaining that this is broken. I even tried in a new profile.
Assignee | ||
Comment 16•11 years ago
|
||
I believe you, I just don't know what's going on here.
Assignee | ||
Comment 17•11 years ago
|
||
Building with the default SDK makes no difference vs. the 10.8 SDK.
Comment 18•11 years ago
|
||
Testing on b2g I am also running into this (testing from the latest mc flame build)
Assignee | ||
Comment 19•11 years ago
|
||
I asked Kannan for a little help on this bug. He built a m-c clone on 163cef53a92c and the Gecko Profiler works properly for him too. Furthermore, a build on m-c tip works ok too.
I pushed a fresh m-c clone to try, builds only: https://tbpl.mozilla.org/?tree=Try&rev=ee8c2e916793
The builds there work too.
I'm guessing there must be some sort of build configuration difference.
Comment 20•11 years ago
|
||
On a long shot I just did a regular opt build from trunk on my mac and this problem reproduces. Yay!
Assignee | ||
Comment 21•11 years ago
|
||
I can *only* reproduce this if I build with
> ac_add_options --enable-profiling
and *only* if the Gecko Profiler addon is installed. Removing the addon makes js entries correctly appear in the built-in profiler. Having it enabled causes an assertion immediately as the addon is enabled:
https://pastebin.mozilla.org/5465795
Assignee | ||
Comment 22•11 years ago
|
||
In hindsight, this doesn't seem like it was a hard bug at all.
Assignee: nobody → vporof
Status: NEW → ASSIGNED
Attachment #8445444 -
Flags: review?(kvijayan)
Attachment #8445444 -
Flags: review?(bgirard)
Comment 23•11 years ago
|
||
Comment on attachment 8445444 [details] [diff] [review]
v1
Review of attachment 8445444 [details] [diff] [review]:
-----------------------------------------------------------------
Nice! Have you confirmed that this resolves the issue?
Attachment #8445444 -
Flags: review?(kvijayan) → review+
Reporter | ||
Comment 24•11 years ago
|
||
Comment on attachment 8445444 [details] [diff] [review]
v1
Review of attachment 8445444 [details] [diff] [review]:
-----------------------------------------------------------------
\o/
Attachment #8445444 -
Flags: review?(bgirard) → review+
Assignee | ||
Comment 25•11 years ago
|
||
(In reply to Kannan Vijayan [:djvj] from comment #23)
> Comment on attachment 8445444 [details] [diff] [review]
It fixes things with my build. Having someone else confirming this would be nice too.
Assignee | ||
Comment 26•11 years ago
|
||
Assignee | ||
Comment 27•11 years ago
|
||
Whiteboard: [fixed-in-fx-team]
Comment 28•11 years ago
|
||
This patch fixes the problem for me. Thank you so much!
Comment 29•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-fx-team]
Target Milestone: --- → mozilla33
You need to log in
before you can comment on or make changes to this bug.
Description
•