Bug 1020541 - JS Stacks no longer reported in the profiler, r=benwa,djvj